@@ -1,3 +1,4 @@
+2013-06-06: global managment of debug flags (eidors_debug)
 2013-06-03: allow specifying command line options for gmsh
 2013-05-29: ======================= RELEASE 3.7.1 ========================
 2013-05-26: add anti-aliasing to print_convert
